# flight-booking-system

./: .env  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  gendata.py  import_flights.py  pyproject.toml  vietnam_flights_2025.json
backend/app/: main.py  schemas.py  utils.py
backend/app/api/: deps.py  main.py
backend/app/api/cruds/: __init__.py  booking_crud.py  flight_crud.py  passenger_crud.py  seat_crud.py  ticket_crud.py  user_crud.py
backend/app/api/routes/: bookings.py  flights.py  login.py  passengers.py  seats.py  tickets.py  users.py
backend/app/api/routes/me/: __init__.py  (+2 more)
backend/app/common/: exceptions.py  logging.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  logging_config.json  security.py
backend/app/cruds/: booking_crud.py  flight_crud.py  passenger_crud.py  seat_crud.py  ticket_crud.py  user_crud.py
backend/app/domain/models/: __init__.py  booking_model.py  flight_model.py  passenger_model.py  seat_model.py  ticket_model.py  user_model.py
backend/app/models/: __init__.py  booking.py  flight.py  passenger.py  seat.py  ticket.py  user.py
backend/app/schemas/: __init__.py  booking.py  flight.py  passenger.py  seat.py  ticket.py  user.py  utils.py
backend/migrations/: env.py
backend/migrations/versions/: 09d87bb6c65e_make_seat_id_nullable.py  1595acd4b2ef_initialize_models.py  38e71c4008a6_add_delete_booking_fields.py  ce447f7199cb_add_airline_reservation_system.py  fad05486b4ba_add_booking_number_and_drop_booking_.py
backend/scripts/: prestart.sh
(+74 files in other folders)
